--- a/webclient/index.html
+++ b/webclient/index.html
@@ -1,15 +1,36 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>uikit-app</title>
+    <title>Pentaho App Shell</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
       rel="stylesheet"
     />
+    <script>
+      // this is temporary. will be a pentaho endpoint/filter
+      // that provides all plugin info relevant for app-shell
+      fetch("/pentaho/content/app-shell-home/webclient/app-shell.config.json")
+          .then(async (response) => {
+            const data = await response.json();
+            const { menu, mainPanel } = globalThis.__appshell_config__;
+
+            globalThis.__appshell_config__.menu = [
+              ...(menu ?? []),
+              ...(data?.menu ?? [])
+            ];
+
+            globalThis.__appshell_config__.mainPanel.views = [
+              ...(mainPanel.views ?? []),
+              ...(data?.mainPanel?.views ?? [])
+            ];
+          });
+    </script>
   </head>
   <body>
     <div id="hv-root"></div>
+
     <script type="module" src="/virtual/main.tsx"></script>
   </body>
 </html>
